--- a/templates/index.html
+++ b/templates/index.html
@@ -105,14 +105,14 @@
         <ul class="space-y-4">
             <li>
                 <div class="mb-auto flex flex-row justify-center gap-4">
-                    <img src="/static/img/logobar.png" alt="logo reclea" class="w-32 h-auto mb-4">
+                    <img src="/static/img/logobar.png" alt="logo reclea" class="w-32 h-20 mb-4">
                     <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 512 512" viewBox="0 0 512 512"
                         id="x" width="100" height="100">
                         <polygon
                             points="500.899 1 406.611 1 256 195.209 105.389 1 11.101 1 208.856 256 11.101 511 105.389 511 256 316.791 406.611 511 500.899 511 303.144 256"
                             fill="white"></polygon>
                     </svg>
-                    <img src="/static/img/NinjaFlylogo.png" alt="logo ninja" class="w-28 h-28">
+                    <img src="/static/img/NinjaFlylogo.png" alt="logo ninja" class="w-28 h-28 -mt-4">
                 </div>
             </li>
             <li class="px-4 py-2 bg-zinc-100 shadow-md">
@@ -162,10 +162,16 @@
             <div
                 class="relative ml-0 md:ml-12 sm:mt-8 gap-2  bg-zinc-700/40 shadow rounded-lg h-8 w-full md:w-5/6 flex flex-col hidden md:block">
                 <div id="" class="w-full h-full pt-1">
-                    <marquee class="font-bold text-white" behavior="scroll" direction="left">BERANI MENJADI
-                        LEBIH BAIK BERANI MENJADI LEBIH BAIK BERANI MENJADI LEBIH BAIK BERANI MENJADI LEBIH
-                        BAIK BERANI MENJADI LEBIH BAIK BERANI MENJADI LEBIH BAIK BERANI MENJADI LEBIH BAIK
-                        BERANI MENJADI LEBIH BAIK BERANI MENJADI LEBIH BAIK</marquee>
+                    <marquee class="font-bold text-white" behavior="scroll" direction="left">BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                    </marquee>
                 </div>
 
 
@@ -353,7 +359,6 @@
                                 <span class="p-1 rounded text-xl font-semibold bg-emerald-500/10 text-emerald-500 leading-none ml-4 flex justify-center w-2/3" id="growthPercentage">Loading...</span>
                                 
                             </div>
-                            
                             
                         </div> 
                         
