--- a/templates/jembatan.html
+++ b/templates/jembatan.html
@@ -70,38 +70,18 @@
         <div id="stars3"></div>
     </section>
     <a id="profilePicture" href="">
-        <img src="/static/img/reclea14.png" alt="Profile Picture">
+        <img src="/static/img/logoreclea0.png" alt="Profile Picture">
     </a>
 
     <div id="userName">
         @Bataramahlingkungan
     </div>
     <div id="hashtag">
-        #Berani Menjadi Lebih Baik 💪
+        #Berani Berubah Menjadi Lebih Baik 💪
         <hr>
     </div>
 
     <div class="custom-container">
-        <div>
-            <a class="link" href="https://tribelio.page/reclea-brick" target="_blank" id="artikelLink">
-                <i class="fa fa-comment">&nbsp;</i>WHY RECLEA BRICK ?
-            </a>
-        </div>
-        <div>
-            <a class="link" href="https://analisadaily.com/berita/baca/2022/01/10/1026451/batu-bata-hitam-reclea-brick-penuhi-standar-keamanan-dan-syarat-sni/#.Ydxd7qUyQuc.whatsapp" target="_blank" id="beritaLink">
-                <i class="fa fa-file-text-o">&nbsp;</i> (NEWS) Bata Reclea Sesuai Standard SNI
-            </a> 
-        </div>
-        <div>
-            <a class="link" href="https://bataramahlingkungan.co.id/" target="_blank" id="websiteLink">
-                <i class="fab fa-chrome">&nbsp;</i>Website Reclea
-            </a>
-        </div>
-        <div>
-            <a class="link" href="https://www.instagram.com/bataramahlingkungan.id/" target="_blank" id="instagramLink">
-                <i class="fab fa-instagram">&nbsp;</i>Instagram
-            </a>
-        </div>
         <div>
             <a class="link" href="https://wa.me/+6281263837222" target="_blank" id="whatsappLink">
                 <i class="fab fa-whatsapp">&nbsp;</i>WhatsApp
@@ -113,8 +93,29 @@
             </a>
         </div>
         <div>
+            <a class="link" href="https://bataramahlingkungan.co.id/" target="_blank" id="websiteLink">
+                <i class="fab fa-chrome">&nbsp;</i>Website Reclea
+            </a>
+        </div>
+        <div>
             <a class="link" href="https://www.youtube.com/@RecleaBrick" target="_blank" id="youtubeLink">
                 <i class="fa fa-play-circle">&nbsp;</i>Youtube
+            </a>
+        </div>
+        <div>
+            <a class="link" href="https://tribelio.page/reclea-brick" target="_blank" id="artikelLink">
+                <i class="fa fa-comment">&nbsp;</i>WHY RECLEA BRICK ?
+            </a>
+        </div>
+        <div>
+            <a class="link" href="https://analisadaily.com/berita/baca/2022/01/10/1026451/batu-bata-hitam-reclea-brick-penuhi-standar-keamanan-dan-syarat-sni/#.Ydxd7qUyQuc.whatsapp" target="_blank" id="beritaLink">
+                <i class="fa fa-file-text-o">&nbsp;</i> (NEWS) Bata Reclea Sesuai Standard SNI
+            </a> 
+        </div>
+        
+        <div>
+            <a class="link" href="https://www.instagram.com/bataramahlingkungan.id/" target="_blank" id="instagramLink">
+                <i class="fab fa-instagram">&nbsp;</i>Instagram
             </a>
         </div>
     </div>
