--- a/templates/index.html
+++ b/templates/index.html
@@ -162,15 +162,33 @@
             <div
                 class="relative ml-0 md:ml-12 sm:mt-8 gap-2  bg-zinc-700/40 shadow rounded-lg h-8 w-full md:w-5/6 flex flex-col hidden md:block">
                 <div id="" class="w-full h-full pt-1">
-                    <marquee class="font-bold text-white" behavior="scroll" direction="left">BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
-                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
-                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
-                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
-                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
-                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
-                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
-                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
-                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● 
+                    <marquee class="font-bold text-white" behavior="scroll" direction="left">BERANI BERUBAH MENJADI
+                        LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN
+                        SUDAH TERUJI ●
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH
+                        BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH
+                        TERUJI ●
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH
+                        BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH
+                        TERUJI ●
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH
+                        BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH
+                        TERUJI ●
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH
+                        BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH
+                        TERUJI ●
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH
+                        BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH
+                        TERUJI ●
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH
+                        BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH
+                        TERUJI ●
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH
+                        BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH
+                        TERUJI ●
+                        BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH
+                        BAIK ● PASTI AMAN DAN SUDAH TERUJI ● BERANI BERUBAH MENJADI LEBIH BAIK ● PASTI AMAN DAN SUDAH
+                        TERUJI ●
                     </marquee>
                 </div>
 
@@ -182,8 +200,6 @@
                     <li>visitor link reclea</li>
                 </ul>
             </div>
-
-
             <div class="m-4 mt-4 ml-0 text-white font-bold underline p-2">
                 <h2>Total Performance :</h2>
             </div>
@@ -196,7 +212,6 @@
                         <p>Instagram</p>
                     </div>
                 </li>
-
                 <li class="bg-zinc-100 p-1 md:p-4 flex items-center space-x-4 shadow rounded-lg">
                     <i class='bx bxl-whatsapp text-4xl bg-green-100 text-green-600 p-2 rounded-full'></i>
                     <div class="text-black mr-4  ">
@@ -351,17 +366,22 @@
                             <div id="chartbul" class="w-full h-full mt-2"></div>
 
                         </div>
-                        <div id="datatot" class="relative flex flex-col-2 ml-0 mt-4 bg-zinc-100 shadow rounded-lg h-36 w-full md:w-5/6 flex items-center justify-center">
+                        <div id="datatot"
+                            class="relative flex flex-col-2 ml-0 mt-4 bg-zinc-100 shadow rounded-lg h-36 w-full md:w-5/6 flex items-center justify-center">
                             <h2 class="text-black text-lg font-semibold mr-8 ml-2 mt-0">Total:</h2>
                             <h3 class="text-7xl font-bold" id="semuadata">Loading...</h3>
                             <div class="flex flex-col justify-center ">
-                                <span class="p-1 rounded text-xs font-semibold   text-stone-800 leading-none ml-4 -mt-20" >Dibandingkan Minggu lalu:</span>
-                                <span class="p-1 rounded text-xl font-semibold bg-emerald-500/10 text-emerald-500 leading-none ml-4 flex justify-center w-2/3" id="growthPercentage">Loading...</span>
-                                
+                                <span
+                                    class="p-1 rounded text-xs font-semibold   text-stone-800 leading-none ml-4 -mt-20">Dibandingkan
+                                    Minggu lalu:</span>
+                                <span
+                                    class="p-1 rounded text-xl font-semibold bg-emerald-500/10 text-emerald-500 leading-none ml-4 flex justify-center w-2/3"
+                                    id="growthPercentage">Loading...</span>
+
                             </div>
-                            
-                        </div> 
-                        
+
+                        </div>
+
                     </div>
 
                     <!-- <div class="flex items-center mb-0.5">
@@ -371,8 +391,7 @@
 
 
                     <!-- Div di kanan -->
-                    <div id="chart"
-                        class="relative md:-ml-16 mt-4 bg-zinc-100 shadow rounded-lg h-96 overflow-hidden">
+                    <div id="chart" class="relative md:-ml-16 mt-4 bg-zinc-100 shadow rounded-lg h-96 overflow-hidden">
                         <div class="flex justify-center pt-4">
                             <button type="button" id="weeksButton"
                                 class="text-white bg-[#050708] hover:bg-[#050708]/90 focus:ring-4 focus:outline-none focus:ring-[#050708]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#050708]/50 dark:hover:bg-[#050708]/30 me-2 mb-2">
@@ -406,7 +425,7 @@
         });
     </script>
 
-    
+
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
